--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="body-smooth">
+<html lang="en">
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
@@ -38,11 +38,6 @@
 
 		<link rel="stylesheet" href="/quill/quill.snow.css" />
 		<link rel="stylesheet" href="/quill/quill.core.css" />
-
-		<script src="/scripts/smooth-scrollbar.js"></script>
-
-		<!-- smooth scroll 
-		<script src="/scripts/SmoothScroll.js" defer></script>-->
 
 		<script src="/scripts/core/errorMessages.js"></script>
 		<script src="/scripts/core/tools.js" defer></script>
@@ -115,13 +110,12 @@
 		<script src="/scripts/cookies-eu-banner/src/customize.js"></script>
 
 		<% if (messages){ %> <% Object.keys(messages).forEach(function (type) { %> <% messages[type].forEach(function (message) { %>
-		<div id="alert" class="alert alert-<%= type %> alert-header" role="alert">
+		<div id="alert" class="alert alert-<%= type %>" role="alert">
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			</button>
 			<%= message %>
 		</div>
 		<% }) %> <% }) %> <% } %>
-	</body>
 </html>
 <script src="/scripts/core/navbar.js" defer></script>
