--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -54,7 +54,9 @@
 					</div>
 					<div class="row mt-3">
 						<div class="col-md-6 text-center">
-							<label class="control-label col-md-12 text-center"> By checking this box I hereby declare that I have read and agree to the <a href="/Legals#sales">Terms of Sales</a> </label>
+							<label class="control-label col-md-12 text-center">
+								By checking this box I hereby declare that I have read and agree to the <a target="_blank" href="/Legals#sales">Terms of Sales</a>
+							</label>
 							<input type="checkbox" name="agree_tos" id="agree_tos" required />
 						</div>
 						<div class="col-md-6">
