fixed responsiveness issue with bio and img relation

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,7 +50,29 @@
 <div class="full-container even" id="container-bio">
 	<div class="container container-front">
 		<div class="biography wrapper pb-0 pt-4">
-			<div class="bio-img-wrapper col-md-4 z-0">
+
+				<div class="bio-img-wrapper col-lg-4 z-0">
+					<div class="sub-img-wrapper mt-5">
+						<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="/img/upload/biopic.png" />
+					</div>
+				</div>
+			
+			<div class="first-bio col-lg-8 ">
+				<h1 class="square-title">Maral Abkarian</h1>
+				<p class="square-txt ml-3">
+					Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de leur
+					terre natale par le génocide arménien en 1915, vécu dans différentes contrées à travers le monde.
+				</p>
+					<p class="square-txt ml-3">
+					C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge, elle
+					fut remarquée pour son talent artistique et sa sensibilité, raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère espiègle.
+				</p>
+			
+			</div>
+
+			</div>
+
+			<!--<div class="bio-img-wrapper col-md-4 z-0">
 				<div class="sub-img-wrapper mt-5">
 					<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="/img/upload/biopic.png" />
 				</div>
@@ -65,7 +87,7 @@
 					C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge, elle
 					fut remarquée pour son talent artistique et sa sensibilité, raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère espiègle.
 				</p>
-			</div>
+			</div>-->
 			<div class="bio-body col-md-10 offset-md-1">
 				<p class="square-txt">
 					Le temps passa et la petite fille grandissante devint une adolescente en fleur au pays des cèdres, contrée d’accueil de ses parents natals. Mais les nuages obscures s’étendant, la guerre
