--- a/public/style.css
+++ b/public/style.css
@@ -1510,6 +1510,8 @@ div.carousel-item.active {
 }
 
 .bio-img {
+	max-width: 400px;
+	max-height: 400px;
 	box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-webkit-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-moz-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
@@ -2674,21 +2676,20 @@ tbody tr:hover {
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 600px) {
 }
-@media (max-width: 768px) {
-	.bio-img-wrapper {
-		margin-bottom: 1em;
-	}
-	/*#purchases {
-		background-color: #dee2e6;
-	}*/
-	.content-wrapper .carousel-container {
-		margin: 20px;
-	}
-	.content-wrapper .thumbnail-wrapper {
-		margin-top: 0.33em !important;
-	}
-}
+
 @media (max-width: 1200px) {
+	.first-bio {
+		flex: 0 0 83.333333% !important;
+		max-width: 83.333333% !important;
+		margin-left: 8.333333% !important;
+	}
+	.square-title {
+		margin-top: 0.25em;
+	}
+	.bio-img-wrapper {
+		margin: auto !important;
+		max-width: 400px;
+	}
 	.footer-list {
 		margin-top: 50px;
 	}
@@ -2715,8 +2716,33 @@ tbody tr:hover {
 		text-align: center;
 	}
 }
+@media (max-width: 768px) {
+	.square-txt {
+		margin-left: 0 !important;
+	}
+	.first-bio {
+		flex: 0 0 100% !important;
+		max-width: 100% !important;
+		margin-left: 0% !important;
+	}
+	.bio-img-wrapper {
+		margin-bottom: 1em;
+	}
+	/*#purchases {
+		background-color: #dee2e6;
+	}*/
+	.content-wrapper .carousel-container {
+		margin: 20px;
+	}
+	.content-wrapper .thumbnail-wrapper {
+		margin-top: 0.33em !important;
+	}
+}
 /* Medium devices (tablets, 768px and up) */
 @media (max-width: 992px) {
+	.carousel-home {
+		margin: 0 10px;
+	}
 	.captcha-row {
 		text-align: center;
 	}
