--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -63,13 +63,15 @@
 
 <div class="full-container even" id="container-landing">
 	<div class="container container-front">
-		<h1 class="square-title text-center">Buy a reproduction</h1>
-		<div class="col-md-10 offset-md-1 text-center p-0">
-			<div class="alert alert-danger alert-static w-100" role="alert">For references, check the <a href="/Catalog" target="_blank">CATALOG</a></div>
+		<h1 class="square-title text-center">Buy a replica</h1>
+			<h2 class="secondary-title text-center">To understand the different replicas options, please check the <a href="/Catalog">Catalog</a></h2>
+				
 			<div class="alert alert-warning alert-static w-100" role="alert">
 				Please note that the image might get cropped a bit depending on the format size you choose and the actual aspect ratio of the image, although we do our best to provide you with exact
-				reproductions!
+				replicas!
 			</div>
+
+			<h1 class="pwinty-title mt-5">Categories</h1>
 			<div class="form-group pwinty-wrapper" id="categories">
 				<label for="framed">
 					<div class="sku-item unselectable cat-list" data-classname="active-cat">
@@ -93,7 +95,9 @@
 				</label>
 			</div>
 
+			<h1 class="pwinty-title mt-2 nodisplay" data-subcategories>Subcategories</h1>
 			<div class="form-group text-center pwinty-wrapper" id="subcategories"></div>
+			<h1 class="pwinty-title mt-2 nodisplay" data-attributes>Options</h1>
 			<div class="form-group text-center pwinty-wrapper" id="attributes"></div>
 		</div>
 
