--- a/public/style.css
+++ b/public/style.css
@@ -1494,6 +1494,14 @@ div.carousel-item.active {
 	margin: auto;
 }
 
+.call-btn-small {
+	display: inline-block;
+	height: 45px;
+	width: 250px;
+	margin: 0;
+	margin-left: 35px;
+}
+
 .catpcha-row {
 	height: 80px;
 }
@@ -1515,6 +1523,34 @@ div.carousel-item.active {
 	box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-webkit-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-moz-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
+}
+
+.secondary-title {
+	color: var(--light-shade-p1);
+	font-size: 1.75rem;
+}
+
+.secondary-title b,
+.secondary-title a {
+	font-size: 2rem;
+	color: var(--interactive-color-m1);
+}
+
+.secondary-title a:hover {
+	color: var(--light-shade-m1);
+	text-decoration: none;
+}
+
+.optional-title {
+	color: var(--light-shade-p1);
+	font-size: 1.4rem;
+	margin: 0;
+}
+
+.optional-title-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .square-title {
@@ -1596,9 +1632,16 @@ div.carousel-item.active {
 }
 
 .pwinty-wrapper {
+	text-align: center;
 	display: grid;
 	grid-template-columns: repeat(3, minmax(200px, 1fr));
-	margin: 10px 0;
+	margin: 10px -13px;
+}
+
+.pwinty-title {
+	font-size: 3rem;
+	margin-left: 20px;
+	color: var(--light-shade-m1);
 }
 
 .pwinty-disclaimer {
@@ -2212,7 +2255,6 @@ tbody tr:hover {
 .sku-item {
 	padding: 2em 1em;
 	margin: 2px;
-	border: 2px solid var(--brand-blue-p1);
 	background-color: var(--brand-blue-p2);
 	color: var(--light-shade);
 	font-weight: bold;
@@ -2717,6 +2759,18 @@ tbody tr:hover {
 	}
 }
 @media (max-width: 768px) {
+	.optional-title-wrapper h3,
+	.optional-title-wrapper input {
+		width: 80% !important;
+		margin: auto;
+		display: block;
+	}
+	.optional-title-wrapper h3 {
+		margin-bottom: 5px;
+	}
+	.optional-title-wrapper {
+		display: inherit;
+	}
 	.square-txt {
 		margin-left: 0 !important;
 	}
