--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -1,16 +1,24 @@
 <% include partials/head %>
 
 <div class="full-container" id="container-landing">
-	<h1 class="square-title text-center">Categories</h1>
+	<h1 class="square-title text-center">Catalog</h1>
+	<h2 class="secondary-title text-center">Check the different categories and their particularity!</a></h2>
+
+	<div class="optional-title-wrapper">
+			<h3 class="optional-title text-center">Go to the gallery and select the painting you want a replica of, it's that simple</h3>
+			<input type="submit" class="submit-btn call-btn-small" value="Buy replicas of your choice" id="goto-gallery" />
+		</div>
+		
 	<div class="catalog-header-btn col-md-6 offset-md-3 mb-4 pt-4">
 		<button id="framed-btn" class="main-btn tab-btn active">Framed Painting</button>
 		<button id="fap-btn" class="main-btn tab-btn">Fine Art Print</button>
 		<button id="canvas-btn" class="main-btn tab-btn">Canvas</button>
 	</div>
+	
 	<div class="container mt-0 pt-0">
 		<div class="container-single catalog-wrapper col-md-12">
 			<div class="alert alert-warning alert-static w-100 align-left" role="alert">
-				This is the catalog available and it's options to tailour our reproductions to your needs. <br />
+				This is the catalog available and it's options to tailour our replicas to your needs. <br />
 				Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
 				>, click the <b>"See More" button</b> for the painting you're interested in, and down below you can chose what options you'd like
 			</div>
@@ -116,7 +124,7 @@
 								<p>
 									<b>Smooth Art Paper</b><br />
 									A <b>high-quality</b>, smooth <b>matt paper</b> with a light, <b>fine-grain surface texture.</b> This paper is particularly suited to contemporary illustration and photography. Image
-									reproduction is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
+									replica is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
 								</p>
 							</div>
 
@@ -125,8 +133,8 @@
 
 								<p>
 									<b>Museum Fine Art</b><br />
-									A <b>gently textured</b> etching paper designed for <b>museum-quality</b> reproductions. This beautiful and versatile art paper is particularly suited to giclée reproductions of
-									artworks and paintings. Ideal for premium colour and monochrome prints.
+									A <b>gently textured</b> etching paper designed for <b>museum-quality</b> replicas. This beautiful and versatile art paper is particularly suited to giclée replicas of artworks and
+									paintings. Ideal for premium colour and monochrome prints.
 								</p>
 							</div>
 
@@ -135,8 +143,8 @@
 
 								<p>
 									<b>Cold Press Watercolour Paper</b><br />
-									A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic reproductions using giclée techniques. Particularly well suited to
-									reproducing collages and graphic illustrations featuring solid blocks of colour.
+									A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic replicas using giclée techniques. Particularly well suited to reproducing
+									collages and graphic illustrations featuring solid blocks of colour.
 								</p>
 							</div>
 
@@ -242,7 +250,7 @@
 								<p>
 									<b>Smooth Art Paper</b><br />
 									A <b>high-quality</b>, smooth <b>matt paper</b> with a light, <b>fine-grain surface texture.</b> This paper is particularly suited to contemporary illustration and photography. Image
-									reproduction is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
+									replicas is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
 								</p>
 							</div>
 
@@ -251,8 +259,8 @@
 
 								<p>
 									<b>Museum Fine Art</b><br />
-									A <b>gently textured</b> etching paper designed for <b>museum-quality</b> reproductions. This beautiful and versatile art paper is particularly suited to giclée reproductions of
-									artworks and paintings. Ideal for premium colour and monochrome prints.
+									A <b>gently textured</b> etching paper designed for <b>museum-quality</b> replicas. This beautiful and versatile art paper is particularly suited to giclée replicas of artworks and
+									paintings. Ideal for premium colour and monochrome prints.
 								</p>
 							</div>
 
@@ -261,8 +269,8 @@
 
 								<p>
 									<b>Cold Press Watercolour Paper</b><br />
-									A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic reproductions using giclée techniques. Particularly well suited to
-									reproducing collages and graphic illustrations featuring solid blocks of colour.
+									A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic replicas using giclée techniques. Particularly well suited to reproducing
+									collages and graphic illustrations featuring solid blocks of colour.
 								</p>
 							</div>
 						</div>
@@ -334,7 +342,7 @@
 									<p>
 										<b>Smooth Art Paper</b><br />
 										A <b>high-quality</b>, smooth <b>matt paper</b> with a light, <b>fine-grain surface texture.</b> This paper is particularly suited to contemporary illustration and photography.
-										Image reproduction is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
+										Image replicas is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
 									</p>
 								</div>
 
@@ -343,8 +351,8 @@
 
 									<p>
 										<b>Museum Fine Art</b><br />
-										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> reproductions. This beautiful and versatile art paper is particularly suited to giclée reproductions of
-										artworks and paintings. Ideal for premium colour and monochrome prints.
+										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> replicas. This beautiful and versatile art paper is particularly suited to giclée replicas of artworks and
+										paintings. Ideal for premium colour and monochrome prints.
 									</p>
 								</div>
 
@@ -353,8 +361,8 @@
 
 									<p>
 										<b>Cold Press Watercolour Paper</b><br />
-										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic reproductions using giclée techniques. Particularly well suited to
-										reproducing collages and graphic illustrations featuring solid blocks of colour.
+										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic replicas using giclée techniques. Particularly well suited to reproducing
+										collages and graphic illustrations featuring solid blocks of colour.
 									</p>
 								</div>
 
@@ -449,7 +457,7 @@
 									<p>
 										<b>Smooth Art Paper</b><br />
 										A <b>high-quality</b>, smooth <b>matt paper</b> with a light, <b>fine-grain surface texture.</b> This paper is particularly suited to contemporary illustration and photography.
-										Image reproduction is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
+										Image replicas is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
 									</p>
 								</div>
 
@@ -458,8 +466,8 @@
 
 									<p>
 										<b>Museum Fine Art</b><br />
-										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> reproductions. This beautiful and versatile art paper is particularly suited to giclée reproductions of
-										artworks and paintings. Ideal for premium colour and monochrome prints.
+										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> replicas. This beautiful and versatile art paper is particularly suited to giclée replicas of artworks and
+										paintings. Ideal for premium colour and monochrome prints.
 									</p>
 								</div>
 
@@ -468,8 +476,8 @@
 
 									<p>
 										<b>Cold Press Watercolour Paper</b><br />
-										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic reproductions using giclée techniques. Particularly well suited to
-										reproducing collages and graphic illustrations featuring solid blocks of colour.
+										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic replicas using giclée techniques. Particularly well suited to reproducing
+										collages and graphic illustrations featuring solid blocks of colour.
 									</p>
 								</div>
 
@@ -547,7 +555,7 @@
 									<p>
 										<b>Smooth Art Paper</b><br />
 										A <b>high-quality</b>, smooth <b>matt paper</b> with a light, <b>fine-grain surface texture.</b> This paper is particularly suited to contemporary illustration and photography.
-										Image reproduction is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
+										Image replica is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
 									</p>
 								</div>
 
@@ -556,8 +564,8 @@
 
 									<p>
 										<b>Museum Fine Art</b><br />
-										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> reproductions. This beautiful and versatile art paper is particularly suited to giclée reproductions of
-										artworks and paintings. Ideal for premium colour and monochrome prints.
+										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> replicas. This beautiful and versatile art paper is particularly suited to giclée replicas of artworks and
+										paintings. Ideal for premium colour and monochrome prints.
 									</p>
 								</div>
 
@@ -566,8 +574,8 @@
 
 									<p>
 										<b>Cold Press Watercolour Paper</b><br />
-										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic reproductions using giclée techniques. Particularly well suited to
-										reproducing collages and graphic illustrations featuring solid blocks of colour.
+										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic replicas using giclée techniques. Particularly well suited to reproducing
+										collages and graphic illustrations featuring solid blocks of colour.
 									</p>
 								</div>
 
@@ -663,7 +671,7 @@
 									<p>
 										<b>Smooth Art Paper</b><br />
 										A <b>high-quality</b>, smooth <b>matt paper</b> with a light, <b>fine-grain surface texture.</b> This paper is particularly suited to contemporary illustration and photography.
-										Image reproduction is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
+										Image replica is <b>sharp, crisp and vibrant</b>, with great density and vivid colours.
 									</p>
 								</div>
 
@@ -672,8 +680,8 @@
 
 									<p>
 										<b>Museum Fine Art</b><br />
-										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> reproductions. This beautiful and versatile art paper is particularly suited to giclée reproductions of
-										artworks and paintings. Ideal for premium colour and monochrome prints.
+										A <b>gently textured</b> etching paper designed for <b>museum-quality</b> replicas. This beautiful and versatile art paper is particularly suited to giclée replicas of artworks and
+										paintings. Ideal for premium colour and monochrome prints.
 									</p>
 								</div>
 
@@ -682,8 +690,8 @@
 
 									<p>
 										<b>Cold Press Watercolour Paper</b><br />
-										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic reproductions using giclée techniques. Particularly well suited to
-										reproducing collages and graphic illustrations featuring solid blocks of colour.
+										A <b>rough-textured</b>, coarse-structured surface designed for <b>high-quality</b> art and photographic replicas using giclée techniques. Particularly well suited to reproducing
+										collages and graphic illustrations featuring solid blocks of colour.
 									</p>
 								</div>
 
@@ -721,7 +729,7 @@
 				<p class="col-md-6 pl-0">
 					Printing is at the heart of everything we do and every product we create.<br />Each fine art print substrate is <b>individually profiled</b> for our printers, ensuring fantastically
 					<b>accurate</b> and
-					<b>consistent reproductions.</b>
+					<b>consistent replicas.</b>
 				</p>
 
 				<div class="catalog-subcategory p-0">
@@ -831,9 +839,7 @@
 
 						<h4 class="mb-1">Canvas Stretcher Bars</h4>
 						<div class="w-100"><b>European knotless pine canvas frames</b></div>
-						<p>
-							The thickness of your canvas stretcher bar determines how far the canvas print will stand off the wall.
-						</p>
+						<p>The thickness of your canvas stretcher bar determines how far the canvas print will stand off the wall.</p>
 						<div class="row">
 							<div class="col-md-6">
 								<img alt="Catalog Image - Stretched Canvas" class="w-100" src="/img/canvas-stretched-2.jpg" />
