--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -2,8 +2,13 @@
 
 <div class="full-container">
 	<div class="container">
-		<h1 class="square-title text-center">Art Gallery</h1>
-		<div class="alert alert-info alert-static w-100" role="alert">Reproductions of these paintings are available for sale by clicking on the "<b>See more</b>" button</div>
+		<h1 class="square-title text-center mb-3">Art Gallery</h1>
+
+		<h2 class="secondary-title text-center">Replicas of these paintings are available for sale by clicking on the "<b>See more</b>" button</h2>
+		<div class="optional-title-wrapper">
+			<h3 class="optional-title text-center">Not interested in replicas?</h3>
+			<input type="submit" class="submit-btn call-btn-small" value="Buy the original version!" id="goto-shop" />
+		</div>
 		<div class="container-gallery mt-3" id="container-gallery">
 			<% if (locals.galleries){ %> <% Object.keys(locals.galleries).forEach(function (index) { %>
 			<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
