--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -3,8 +3,10 @@
 <div class="full-container" id="container-landing">
 	<div class="container">
 		<h1 class="square-title text-center">Unique Paintings</h1>
-		<div class="alert alert-info alert-static w-100 mb-3" role="alert">
-			We also sell great quality reproductions in all sizes and shapes, for more information check the <a href="/Catalog">Catalog</a>
+		<h2 class="secondary-title text-center">All these paintings are unique, get them before someone else does!</a></h2>
+		<div class="optional-title-wrapper">
+			<h3 class="optional-title text-center">Interested in replicas?</h3>
+			<input type="submit" class="submit-btn call-btn-small" value="Buy replicas of your choice" id="goto-gallery" />
 		</div>
 		<div id="original" class="tab container-shop">
 			<% if (locals.original){ %> <% Object.keys(locals.original).forEach(function (index) { %>
@@ -31,7 +33,7 @@
 			</div>
 			<% }) %> <% } else { %>
 			<div class="text-center bwhite">
-				<h1 class="alertEmpty">No more original paintings left, check the catalog to buy reproductions!</h1>
+				<h1 class="alertEmpty">No more original paintings left, check the catalog to buy replicas!</h1>
 			</div>
 
 			<% } %>
