--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -6,7 +6,7 @@
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Ajouter à la galerie</h1>
-			<form id="gallery" method="POST" action="/api/gallery/post" data-postgal="true" enctype="multipart/form-data">
+			<form id="gallery" method="POST" action="/api/gallery/post" data-postgal="true" data-tagform="true" enctype="multipart/form-data">
 				<div class="form-group">
 					<label class="control-label">Titre</label>
 					<input type="text" name="title" id="title" placeholder="Titre" data-vstring="1;256" required />
@@ -38,5 +38,6 @@
 	<% include ../partials/footer %>
 </div>
 
+<script src="/scripts/gallery/tags.js" defer></script>
 <script src="/scripts/gallery/galleryScripts.js" defer></script>
 <script src="/scripts/core/frontValidation.js" defer></script>
