--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="full-container" id="container-landing">
+<div class="full-container full-container-one" id="container-landing">
 	<div class="container container-front">
 		<div class="wrapper-404">
 			<h1>404</h1>
