--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="full-container" id="container-landing">
+<div class="full-container full-container-one" id="container-landing">
 	<h1 class="square-title text-center">Catalog</h1>
 	<h2 class="secondary-title text-center">Check the different categories and their particularity!</a></h2>
 
