--- a/views/Resetpw.ejs
+++ b/views/Resetpw.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<div class="container container-front">
 		<form class="col-md-10 offset-md-1" id="resetpw" method="POST" action="/api/user/resetpw">
 			<h2 class="square-title text-center mb-5">Reset your password</h2>
