--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="full-container" id="container-landing">
+<div class="full-container full-container-one" id="container-landing">
 	<div class="container">
 		<h1 class="square-title text-center">Unique Paintings</h1>
 		<h2 class="secondary-title text-center">All these paintings are unique, get them before someone else does!</a></h2>
