--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -2,7 +2,7 @@
 
 <script src="/scripts/core/bootstrap-tagsinput.js"></script>
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<h1 class="square-title text-center">Search paintings by tags</h1>
 	<div>
 		<form class="col-md-6 offset-md-3 mb-4 mt-2 p-0" id="tags" method="GET" action="/Galerie/tags" data-tagform="true" data-posttags="true">
