--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 
 <script src="/scripts/core/bootstrap-tagsinput.js"></script>
-<div class="full-container" id="container-admin">
+<div class="full-container full-container-one" id="container-admin">
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Modifier la galerie</h1>
