--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -2,7 +2,7 @@
 
 <script src="/scripts/core/bootstrap-tagsinput.js"></script>
 
-<div class="full-container" id="container-admin">
+<div class="full-container full-container-one" id="container-admin">
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Ajouter à la galerie</h1>
