--- a/views/restricted/Orders.ejs
+++ b/views/restricted/Orders.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head %>
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<div class="container">
 		<h1 class="square-title text-center">Commandes</h1>
 		<div class="text-center mb-4">
