--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head %>
 
-<div class="full-container" id="container-landing">
+<div class="full-container full-container-one" id="container-landing">
 	<div class="container container-front">
 		<% if(locals.blog){ %>
 		<div class="single-wrapper" id="<%= locals.blog._id %>">
