--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Billing Address</h1>
