--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<div class="container">
 		<h1 class="square-title text-center mb-3">Art Gallery</h1>
 
