--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -5,21 +5,17 @@
 <input type="hidden" id="stripePublicKey" value="<%= locals.stripePublicKey %>" />
 <input type="hidden" id="billingInfo" value="<%= locals.billing %>" />
 
-<div class="full-container">
+<div class="full-container full-container-one">
 	<div class="container container-front">
 		<div class="col-12 col-lg-6 offset-lg-3 mt-5">
 			<div class="row">
 				<h1 class="payment-price square-title"><% if (locals.totalPrice) { %><%= locals.totalPrice %><% } %>€</h1>
 				<form class="w-100" action="" method="POST" id="payment-form">
-					<div class="alert alert-info alert-static w-100 mb-3" role="alert">
-						Email is needed for receipt and shipping updates
-					</div>
+					<div class="alert alert-info alert-static w-100 mb-3" role="alert">Email is needed for receipt and shipping updates</div>
 					<label class="control-label" for="email">Email</label>
 					<input type="text" id="email" placeholder="Email address" required />
 
-					<label for="card-element" class="control-label">
-						Credit or debit card
-					</label>
+					<label for="card-element" class="control-label"> Credit or debit card </label>
 					<div class="form-row">
 						<div id="card-element">
 							<!-- A Stripe Element will be inserted here. -->
