--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head %>
 
-<div class="full-container" id="container-admin">
+<div class="full-container full-container-one" id="container-admin">
 	<div class="container container-front">
 		<div class="col-md-10 offset-md-1">
 			<h1 class="square-title text-center">Ajouter à la boutique</h1>
