redesigned catalog to make things clearer to user

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -118,7 +118,9 @@
 	<div class="container">
 		<div class="col-md-10 offset-md-1 p-0">
 			<h1 class="square-title text-center">Delivery Informations</h1>
-			<div class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not <a href="/User" target="_blank">change your delivery address</a></div>
+			<div class="alert alert-info alert-static w-100 mb-3" role="alert">
+				Make sure these informations are correct, if not <a href="/User#delivery" target="_blank">change your delivery address</a>
+			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<label class="control-label">Last Name</label>
